@@ -28,6 +28,8 @@ includes the changes listed under "ELinks 0.11.4.GIT now" below.
   enabled it at connection.ssl.cert_verify.
 * bug 1040: Blacklist servers that don't support TLS.  This reduces
   SSL errors especially in HTTP POST requests using GnuTLS.
+* bugs 1007, 1041: Display unrecognized lines in FTP directory
+  listings, instead of annoying the user with error messages.
 * minor bug 951: SpiderMonkey scripting objects used to prevent ELinks
   from removing files from the memory cache.
 * build bug 1044: Check whether -rdynamic works with libraries.
